  sent through a xymonproxy
* TLS/SSL support added
* IPv6 support added
* xymonlaunch: Add support for specifying a PIDFILE in tasks.cfg or clientlaunch.cfg
* xymonlaunch: Add SENDHUP support for optionally passing along signals to running 
* Support and display "TEXT=Human readable" tags for LOG entries in analysis.cfg on msgs

* Performance optimizations / bug fixes with POSIX btree usage
* Performance improvements within xymond_rrd
* Convert various size variables to size_t throughout
* Add error handling to recover when messages greater than the internal MAX BUF size
  are found (must delete to not be wedged)
* Add better reporting for sendmessage() failures
* More verbose debugging in message processing, cookie searching, and in core library routines
* xymonlaunch: Improve logging for actions taken against tasks
  tasks (ie, for log rotation)
* xymonlaunch now passes the path to LOGFILE (if configured) as $XYMONLAUNCH_LOGFILENAME,
  which will be used as the default logfn for xymond, xymonproxy, xymond_channel,
  and its children
* xymond_channel: Timestamp and tag log output to reduce confusion w/ child entries
* Uplift most log file configuration from command lines to tasks.cfg and clientlaunch.cfg
* logrotate: Adjust default config to send -HUP to xymonlaunch instead of searching for
  xymond PID file.
* Search in /usr for libraries and includes during build configuration
* Move static WWW files (gifs, help files, and CSS) to new /static/ directory outside of 
  $XYMONWWW
* Store 'notes' uploads in $XYMONVAR rather than $XYMONWWW directory
* Move 'periodic' directory (output from xymonreport.sh, executed via crondate) to $XYMONVAR


Changes from 4.3.22 -> 4.3.23 (12 Nov 2015)
===========================================
 
* rev 7740

* Fix broken 'TRACK' and 'OPTIONAL' identifiers in analysis.cfg
* Prevent logfetch from segfaulting if a file we're tracking line matching
  deltacounts for wasn't found